--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../paginas/index.php" id="logo"
-        ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
+        ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
       /></a>
       <nav>
         <ul class="lista-nav">
