--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -40,7 +40,7 @@
     background-size: contain;">
     </div>
     <div class="col-8">
-      <h1 class="h1-texto">Mitologia Grega:</h1>
+      <h1 class="h1-texto">Mitologia Grega</h1>
       <p>Ela reúne um conjunto de mitos e lendas criados pelos gregos na antiguidade. O objetivo principal era de
         explicar alguns fatos, como a origem da vida, a vida após a morte, ou até mesmo os fenômenos da natureza.</p>
       <p>Assim, a criação das narrativas fantásticas que englobam a mitologia grega foi a maneira encontrada pelos
