--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -16,7 +16,7 @@
     <header>
       <div class="logo">
       <a href="../paginas/index.php" id="logo"
-      ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
+      ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
     /></a></div>
       <nav>
         <ul class="lista-nav">
