--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -28,7 +28,7 @@
               <ul class="dropdown">
                   <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
                   <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-                  <li class="link-dropdown" id="linkJaponesa"><a href="greco-romana.html">Japonesa</a></li>
+                  <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                   <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                   <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                   <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
@@ -46,7 +46,7 @@
        
       </div>
       <div class="col-8">
-        <h1 class="h1-texto">Mitologia Nórdica:</h1>
+        <h1 class="h1-texto">Mitologia Nórdica</h1>
         <p>
           A <strong>mitologia nórdica</strong>, viking ou germânica, possui mais
           de um nome por ser uma crença de vários povos, foi desenvolvida nos
