--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -111,7 +111,9 @@
             criador e protetor da cidade de Mênfis. Além disso, era considerado
             deus dos artesãos e arquitetos.
           </li>
-
+          <li>
+            <b>Ma'at:</b> personifica os princípios de ordem, verdade, justiça e equilíbrio cósmico. Ma'at era frequentemente representada como uma mulher com uma pena de avestruz em sua cabeça, simbolizando a verdade.
+          </li>
           <li><b>Hu:</b> representava a palavra de criação do Universo.</li>
         </ol>
 
