--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -245,18 +245,51 @@
         conseguia sempre se superar e vencer seus inimigos.</p>
       <h2>Principais Deuses </h2>
       <ul>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
-        <li><strong></strong></li>
+        <li><strong>Brahma:</strong> Ele é considerado o criador do universo. Geralmente é representado com quatro cabeças, cada uma olhando para um ponto cardeal.
+        </li>
+        <li><strong>Vishnu:</strong> Ele é o preservador do universo e é conhecido por encarnações chamadas "avataras". Algumas de suas encarnações notáveis incluem Rama e Krishna.
+        </li>
+        <li><strong>Shiva:</strong> Ele é o deus da destruição, mas também é associado à regeneração e renascimento. Shiva é frequentemente retratado com três olhos e uma serpente ao redor do pescoço.
+        </li>
+        <li><strong>Parvati:</strong> Esposa de Shiva, ela é uma deusa da fertilidade, amor e devoção. É também conhecida por suas formas guerreiras, como Durga e Kali.
+        </li>
+        <li><strong>Lakshmi:</strong> Deusa da riqueza, prosperidade e fortuna. Ela é frequentemente representada com moedas de ouro e rodeada por elefantes.
+        </li>
+        <li><strong>Saraswati</strong>: Deusa da sabedoria, conhecimento, música e artes. Ela é geralmente retratada com um instrumento musical e um livro.
+        </li>
+        <li><strong>Durga:</strong> Uma forma guerreira de Parvati, ela é conhecida por derrotar o demônio Mahishasura. É celebrada durante o festival Navaratri.
+        </li>
+        <li><strong>Kali:</strong> Outra forma guerreira de Parvati, Kali é associada à destruição do mal e à transformação. Ela é representada com uma aparência feroz e muitas vezes segura uma espada e uma cabeça decepada.
+        </li>
+        <li><strong>Ganesha:</strong> Filho de Shiva e Parvati, Ganesha é o deus da sabedoria, inteligência e removedor de obstáculos. Ele é conhecido por sua cabeça de elefante.
+        </li>
+        <li><strong>Hanuman:</strong> Um devoto macaco e aliado de Rama na epopeia Ramayana. Ele é reverenciado como um símbolo de devoção, força e lealdade.</li>
+        <li><strong>Rama:</strong> O príncipe e herói do épico Ramayana, conhecido por sua virtude, justiça e devoção a sua esposa Sita.</li>
+        <li><strong>Krishna:</strong> Uma das encarnações de Vishnu, Krishna é conhecido por suas histórias de infância, suas habilidades como guerreiro e suas lições de vida no Bhagavad Gita.</li>
+      </ul>
+      <h2>Karma</h2>
+      <p>É um conceito central que se refere à lei de causa e efeito. Ele postula que todas as ações, intenções e escolhas têm consequências que afetam o indivíduo, seja nesta vida ou em futuras encarnações. Em essência, o karma é uma espécie de "balanço" das ações de uma pessoa, influenciando suas experiências e circunstâncias ao longo do tempo. Acredita-se que o karma não se limita a uma única vida, mas se acumula ao longo de várias encarnações, moldando o caminho espiritual de um indivíduo. Portanto, o entendimento e a gestão do karma são considerados essenciais para o crescimento espiritual e para alcançar a liberação do ciclo de reencarnação, conhecida como moksha. Em última análise, o karma enfatiza a responsabilidade individual pelas ações e oferece um contexto filosófico profundo para a compreensão da vida, das escolhas e do destino.
+      </p>
+      <h2>Influência</h2>
+      <ul>
+        <li><strong>Religião e Espiritualidade:</strong> A mitologia hindu desempenha um papel central na religião hindu. Os textos mitológicos, como os Vedas, os Puranas e os épicos "Mahabharata" e "Ramayana", contêm histórias sobre deuses, deusas, demônios e heróis. Essas histórias são usadas para transmitir ensinamentos religiosos e filosóficos, como a reencarnação (samsara) e o carma.
+        </li>
+        <li><strong>Adoração e Rituais:</strong> Muitos hindus adoram deuses e deusas específicos, como Vishnu, Shiva, Durga e Lakshmi, por meio de rituais e festivais que têm suas raízes na mitologia. Por exemplo, o festival Diwali é uma celebração das aventuras do deus Rama, e o Navaratri homenageia a deusa Durga.
+        </li>
+        <li><strong>Arquitetura e Templos:</strong> Templos hindus frequentemente são construídos com base em conceitos mitológicos e representam histórias mitológicas em sua arquitetura e esculturas. Um exemplo é o Templo de Angkor Wat no Camboja, que é dedicado a Vishnu.
+        </li>
+        <li><strong>>Arte e Escultura:</strong> A mitologia hindu é uma fonte rica de inspiração para as artes visuais, incluindo pintura, escultura e dança. Representações de deuses, deusas e epopeias mitológicas são comuns em muitas formas de arte indiana.
+        </li>
+        <li><strong>Literatura e Mídia:</strong> A mitologia hindu é frequentemente adaptada na literatura e nas mídias contemporâneas. Os épicos "Mahabharata" e "Ramayana" têm sido fontes para inúmeras adaptações em filmes, séries de TV e livros.
+        </li>
+        <li><strong>Filosofia e Espiritualidade:</strong> A mitologia hindu também influencia a filosofia e a espiritualidade. Conceitos como o yoga, a meditação e a busca pela iluminação espiritual têm raízes na mitologia e nos ensinamentos dos textos sagrados.
+        </li>
+        <li><strong>Cultura Popular:</strong> A mitologia hindu é parte integrante da cultura popular indiana. Muitos nomes pessoais, músicas, danças e histórias cotidianas têm conexões com a mitologia.</li>
+        <li><strong>Identidade Nacional e Regional:</strong> A mitologia desempenha um papel na formação da identidade cultural da Índia e das regiões dentro do país. Cada região pode ter suas próprias histórias e deidades específicas.
+        </li>
+        <li><strong>Diáspora Hindu:</strong> A mitologia hindu é levada por comunidades hindus em todo o mundo, influenciando suas práticas religiosas, festivais e tradições culturais, mantendo viva a conexão com suas raízes.
+        </li>
+        <p>Em resumo, a mitologia hindu é um componente vital da cultura e da religião indianas, permeando a vida cotidiana, as artes, a filosofia e a espiritualidade. Ela continua a ser uma parte ativa e relevante da herança cultural da Índia e uma fonte de inspiração para muitos aspectos da vida moderna, tanto na Índia quanto em comunidades hindus em todo o mundo.</p>
       </ul>
         <div class="botao">
           <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
