--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -132,8 +132,6 @@
                     <h1 class="questao">Pergunta 4</h1>
                     <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
                         características distintas?</p>
-                    <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
-                        características distintas?</p>
                     <p class="dificuldade">Nível médio</p>
                 </div>
                 <div class="alternativas">
@@ -162,9 +160,9 @@
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo">
                     <label>B - Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo</label>
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                    <label> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
+                    <label>C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
                     <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                    <label>D - Um pássaro mágico</label>
+                    <label>D - Ishtar é a deusa do amor e da guerra, frequentemente associada a Vênus.</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta5">
                     </div>
@@ -184,7 +182,7 @@
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo">
                     <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                    <label> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
+                    <label>D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
                         nórdica.</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta6">
@@ -194,7 +192,7 @@
             <section id="secao-pergunta-7" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 7:</h1>
-                    <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
+                    <p class="pergunta">Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
                         nórdica?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
@@ -202,9 +200,9 @@
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
                     <label>A - Uma grande festa dos deuses antes do fim do mundo.</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
+                    <label>B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
-                    <label> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
+                    <label>C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
                         mundo.</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
                     <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
@@ -216,14 +214,16 @@
             <section id="secao-pergunta-8" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 8:</h1>
-                    <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos</p>
+                    <p class="pergunta">Qual é o nome dado as mulheres que serviam a Odin na mitologia nórdica e o 
+                        que elas faziam?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses</label>
+                    <label>A - Nornas, responsáveis por tecer o destino dos homens.</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza</label>
+                    <label> B - Valkirias, encarregadas de escolher guerreiros para Valhala e participar de 
+                        batalhas.</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo">
                     <label> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram
                         abalados</label>
