icone romano e nordica

--- a/front/site/paginas/index.html
+++ b/front/site/paginas/index.html
@@ -1,10 +1,4 @@
-<?php
-  if(!isset($_SESSION)) {
-    session_start();
-  }
-  
-  include('../../../back/protecao.php');
-?>
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -157,7 +151,7 @@
         </div>
         <div class="caixa nordica">
           <div class="conteudocx">
-            <ion-icon name="image-outline"></ion-icon>
+            <img src="imagens/icons/nordica.png" alt="">
             <h2>Mitologia nordica</h2>
             <p>A mitologia nórdica, ou escandinava, é um conjunto de lendas e crenças das culturas da Escandinávia, incluindo deuses, heróis e criaturas míticas que desempenham papéis importantes nas histórias e na cultura desses povos.</p>
             <button class="alternar-aba" data-target="nordica">Ver Mais</button>
@@ -176,7 +170,7 @@
         </div>
         <div class="caixa romana">
           <div class="conteudocx">
-            <img src="../../../back/imagens/simbolo-romano-index.png" alt="" class="logo-index">
+            <img src="imagens/icons/ddf1d5c26412724c504305be6351106a-icone-de-golpe-de-capacete-romano.png" alt="" width="200px">
             <h2>Mitologia romana</h2>
             <p>A mitologia romana é um conjunto de crenças e lendas da Roma Antiga, envolvendo deuses, heróis e histórias que desempenharam papéis significativos na cultura e religião romanas.</p>
             <button class="alternar-aba" data-target="romana">Ver Mais</button>
