configurando contato e arrumando logo

--- a/front/site/paginas/footer/contato-certo.html
+++ b/front/site/paginas/footer/contato-certo.html
@@ -96,7 +96,7 @@
   </div>
 
   <div class="card">
-    <img src="../imagens/lucas.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+    <img src="../imagens/lucas.jpg" alt="Foto de Lucas Diniz" class="profile-image">
     <h2 class="name">Lucas Diniz dos Santos</h2>
     <p>lucasdiniz1708@gmail.com</p>
     <p class="description">
@@ -105,7 +105,7 @@
   </div>
 
   <div class="card">
-    <img src="../imagens/yohana.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+    <img src="../imagens/yohana.jfif" alt="Foto de Luiz Fernando" class="profile-image">
     <h2 class="name">Yohana Jahn</h2>    
     <p>yohanajahn2@gmail.com</p>
     <p class="description">
