--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -16,7 +16,7 @@
         class="logo" /></a>
     <nav>
       <ul class="lista-nav">
-        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+        <li id="link-home"><a href="../index.php">HOME</a></li>
         <li>
           <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
           <ul class="dropdown">
@@ -36,18 +36,21 @@
   <main>
     <div class="portifolio">
       <div class="card">
-        <img src="../imagens/emili.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <img src="../imagens/emili.jpg" alt="Foto de Emili Spricigom" class="profile-image">
         <h2 class="name">Emili Spricigo</h2>
         <p>emilispricigo180@gmail.com</p>
         <p class="description">
           Atuou como pesquisadora e roteirista da apresentação. Fazendo a pesquisa e perguntas de cada mitologia e
           escolhendo cores para o design do site.
         </p>
-
+        <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+        </div>
       </div>
 
       <div class="card">
-        <img src="../imagens/joao.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <img src="../imagens/joao.jpg" alt="Foto de João Victor" class="profile-image">
         <h2 class="name">João Victor Portela Rocha</h2>
         <p>joaovictor239090@gmail.com</p>
         <p class="description">
@@ -56,6 +59,8 @@
           tabela de ranking dos jogadores do quiz.
         </p>
         <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
           <img src="../imagens/icons/js-logo.png" alt="">
           <img src="../imagens/icons/php-logo.png" alt="">
           <img src="../imagens/icons/mysql-logo.png" alt="">
@@ -63,21 +68,35 @@
       </div>
 
       <div class="card">
-        <img src="../imagens/kaua.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <img src="../imagens/kaua.jpg" alt="Foto de Kauã Martins" class="profile-image">
         <h2 class="name">Kauã Martins Barros</h2>
         <p>martinsbarroskaua@gmail.com</p>
         <p class="description">
           Atuou como desenvolvedor front-end usando javascript, HTML e CSS. Foi responsável por fazer o quiz de algumas
           mitologias. </p>
           <div class="language-icon">
-            <img src="../imagens/icons/js-logo.png" alt="">
             <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
             <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+            <img src="../imagens/icons/js-logo.png" alt="">
           </div>
       </div>
 
       <div class="card">
-        <img src="../imagens/luizE.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <img src="../imagens/lucas.jpg" alt="Foto de Lucas Diniz" class="profile-image">
+        <h2 class="name">Lucas Diniz dos Santos</h2>
+        <p>lucasdiniz1708@gmail.com</p>
+        <p class="description">
+          Atuou como desenvolvedor front-end das páginas do site. Utilizando HTML e CSS. Teve participação na elaboração
+          de perguntas para o quiz.
+        </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../imagens/luizE.jpg" alt="Foto de Luiz Eduardo" class="profile-image">
         <h2 class="name">Luiz Eduardo Cabral da Rosa</h2>
         <p>luizeduardocabraldarosa@gmail.com</p>
         <p class="description">
@@ -85,9 +104,9 @@
           cores par cada mitologia no carrosel.
         </p>
         <div class="language-icon">
-          <img src="../imagens/icons/js-logo.png" alt="">
           <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
           <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+          <img src="../imagens/icons/js-logo.png" alt="">
         </div>
       </div>
 
@@ -103,34 +122,27 @@
           João.
         </p>
         <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+          <img src="../imagens/icons/js-logo.png" alt="">
+          <img src="../imagens/icons/icon-bootstrap.png" alt="">
           <img src="../imagens/icons/php-logo.png" alt="">
-          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
-          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
         </div>
       </div>
 
-      <div class="card">
-        <img src="../imagens/lucas.jpg" alt="Foto de Luiz Fernando" class="profile-image">
-        <h2 class="name">Lucas Diniz dos Santos</h2>
-        <p>lucasdiniz1708@gmail.com</p>
-        <p class="description">
-          Atuou como desenvolvedor front-end das páginas do site. Utilizando HTML e CSS. Teve participação na elaboração
-          de perguntas para o quiz.
-        </p>
-        <div class="language-icon">
-          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
-          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
-        </div>
-      </div>
 
       <div class="card">
-        <img src="../imagens/yohana.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <img src="../imagens/yohana1.jpeg" alt="Foto de Yohana Jahn" class="profile-image">
         <h2 class="name">Yohana Jahn</h2>
         <p>yohanajahn2@gmail.com</p>
         <p class="description">
           Atuou como pesquisadora de conteúdos, fez o layout do site completo, ajudou no front-end a construir a
           estrutura das páginas
         </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+        </div>
       </div>
     </div>
   </main>
