--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -50,17 +50,14 @@
 
       <h2>Ciclos da mitologia irlandesa</h2>
 
-      <p>A mitologia irlandesa pode ser dividida em quatro ciclos diferente, ou seja, quatro momentos históricos
-        distintos.</p>
+      <p>A mitologia irlandesa pode ser dividida em quatro ciclos diferentes, ou seja, quatro momentos históricos distintos. Esses ciclos são: Ciclo Mitológico, Ciclo Ulster, Ciclo Feniano e Ciclo Histórico.</p>
 
       <p>A princípio, ocorre o Ciclo Mitológico Irlandês, quando ocorre a origem desse povo e a história dos antigos
         deuses. É o ciclo que tem as fontes menos preservadas, mas oferece registros importantes para compreender a
         mitologia. Entre eles, por exemplo, o fato dos Tuatha Dé Danann não serem encarados ainda como deuses no
         período.</p>
 
-      <p>O Ciclo de Uster ocorre no início da era cristão e tem esse nome pela província em que se passe. Nesse período,
-        a mitologia irlandesa conta com um grupo de histórias heroicas de personagens como Conchobar mac Nessa, rei do
-        Ulster, o grande herói Cúchulainn, filho de Lug, e de seus amigos, amantes e inimigos.</p>
+      <p>O Ciclo de Uster que é o mais falado ocorre no início da era cristão e tem esse nome pela província em que se passe. Nesse período, a mitologia irlandesa conta com um grupo de histórias heroicas de personagens como Conchobar mac Nessa, rei do Ulster, o grande herói Cúchulainn, filho de Lug, e de seus amigos, amantes e inimigos.</p>
 
       <p>As histórias desse período refletem uma sociedade guerreira, como os irlandeses da época, ao mesmo tempo em que
         se aproxima do Ciclo Mitológico. Isso porque personagens do ciclo anterior aparecem aqui. Os eventos do Ciclo
@@ -132,9 +129,7 @@
         acontecem no reino humano. Se uma criança encontra uma fada e a trata bem, pode ter um desejo concedido. </p>
 
       <h3>The Pooka</h3>
-      <p>É um dos muitos seres metamorfos que habitam a Irlanda. Temido por muitos, a lenda conta a história de um ser
-        em forma de cão preto, com olhos grandes e sedentos por sangue, que pode se transformar em um Goblin (espécie de
-        duende) ou até mesmo em um humano, mas mantendo traços caninos.</p>
+      <p>A Pooka é uma criatura lendária da mitologia irlandesa, conhecida por sua natureza travessa e capacidade de assumir várias formas. Ela é frequentemente retratada como um espírito ou entidade metamórfica, muitas vezes tomando a forma de um cavalo negro com olhos flamejantes, aguia, cachorro e outros animais. A Pooka é ambivalente, capaz de causar problemas, mas também de trazer boa sorte. Ela está associada a celebrações como o festival de Samhain (precursor do Halloween) e faz parte do rico folclore e da tradição mágica da Irlanda.</p>
 
       <h3>Mermaids</h3>
       <p>As mermaids (sereias), habitantes das águas dos oceanos que banham a Irlanda, não são as belas sereias dos
@@ -161,7 +156,46 @@
         cavaleiro, será completamente cegado para sempre. Acredita-se que o Dullahan aparece após o pôr-do-sol, em
         festivais e banquetes.</p>
 
+        <h2>Contos</h2>
+        <h3>Finn McCool</h3>
+        <p>Finn McCool, cujo nome em gaélico irlandês é Fionn mac Cumhaill, é um personagem lendário da mitologia irlandesa e uma figura central na tradição do Fianna, um grupo de guerreiros e caçadores. Sua história é rica em aventuras, façanhas heróicas e elementos míticos. Uma das histórias mais famosas associadas a Finn McCool é a lenda de seu confronto com o gigante escocês Benandonner.</p>
+        <p>A história do confronto entre Finn McCool e Benandonner começa quando Finn McCool vive na costa norte da Irlanda, perto da Estrada Gigante, uma formação geológica composta de colunas de basalto. Finn descobre que na Escócia há outro gigante chamado Benandonner, que zomba da força de Finn. Em resposta, Finn decide construir uma estrada de coluna de basalto que chega à Escócia para desafiar Benandonner.</p>
+        <p>Depois de completar a Causa dos Gigantes, Finn McCool cruza a Escócia e desafia Benandonner. No entanto, quando Finn vê o quão imenso é o gigante escocês, ele começa a temer por sua vida e corre de volta para a Irlanda. Em sua fuga, sua esposa, Oonagh, tem uma ideia brilhante para proteger Finn. Você viu seu marido como um bebê e o colocou em um berço.</p>
+        <p>Quando Benandonner chega à casa de Finn em busca de um confronto, ele conhece o suposto bebê, que na verdade é Finn em traje. Vendo o "bebê" tão grande e forte, Benandonner fica com medo e pensa que se o bebê é tão grande, Finn deve ser ainda maior. Temeroso, o gigante escocês foge de volta para a Escócia, destruindo a Estrada Gigante em seu caminho para que Finn não possa segui-lo.</p>
+        <p>Esta lenda de Finn McCool e a Calçada dos Gigantes é uma das histórias mais conhecidas da mitologia irlandesa e escocesa. A Calçada do Gigante, que é na verdade uma formação geológica natural na costa norte da Irlanda, é muitas vezes vista como a evidência desse confronto mítico entre gigantes.</p>
+        <p>Finn McCool também é o protagonista de muitas outras histórias e aventuras na mitologia irlandesa, e seu legado permanece como um herói lendário na cultura e no folclore da Irlanda.</p>
 
+        <h3>A Batalha de Mag Tuired</h3>
+        <p>A Batalha de Mag Tuired (Cath Maige Tuired em gaélico irlandês) é uma das mais importantes e épicas narrativas mitológicas na mitologia irlandesa. Ela descreve a batalha entre os Tuatha Dé Danann, uma raça de deuses ou seres sobrenaturais, e os Fir Bolg, um povo mítico, pela supremacia na Irlanda. A história é contada em duas partes: a Primeira Batalha de Mag Tuired e a Segunda Batalha de Mag Tuired.</p>
+        <p>Primeira Batalha de Mag Tuired: A primeira parte da história narra a chegada dos Tuatha Dé Danann à Irlanda e seu confronto com os Fir Bolg, que já estavam no país. A batalha ocorre na planície de Mag Tuired, e é uma luta feroz entre os dois grupos. Dagda, um dos líderes dos Tuatha Dé Danann, desempenha um papel central na batalha. Ele usa sua clava mágica para matar e ressuscitar os guerreiros Fir Bolg, alternando entre esses poderes. No final, os Tuatha Dé Danann emergem vitoriosos, e os Fir Bolg são subjugados.</p>
+        <p>Segunda Batalha de Mag Tuired: Na segunda parte da história, os Tuatha Dé Danann enfrentam novos desafios, incluindo a ameaça de Balor, um líder Fir Bolg de grande poder. Balor possui um olho que, quando aberto, é capaz de causar destruição. Dagda, mais uma vez, desempenha um papel crucial. Ele lança uma lança mágica que atravessa o olho de Balor, matando-o e selando a vitória dos Tuatha Dé Danann.</p>
+        <p>A Batalha de Mag Tuired é uma história rica em elementos míticos, com deuses, heróis, magia e conflitos épicos. Ela destaca a luta dos Tuatha Dé Danann para conquistar a Irlanda e se estabelecer como suas principais divindades. Essa narrativa é uma parte fundamental da mitologia celta irlandesa e contribui para a rica tradição mítica e folclórica da Irlanda.</p>
+        
+        <h3>Tuatha Dé Danann</h3>
+        <p>Os Tuatha Dé Danann, muitas vezes chamados apenas de Tuatha Dé, são um grupo de divindades ou seres sobrenaturais na mitologia celta irlandesa. Seu nome significa "Povo da Deusa Danu". Trouxemos um resumo sobre para facilitar o estudo:</p>
+        <ul>
+          <li><strong>Origens míticas:</strong> Os Tuatha Dé Danann são frequentemente associados a uma raça de deuses ou seres divinos que vieram à Irlanda de outro mundo. Eles são considerados como os primeiros habitantes da ilha e têm origens míticas complexas.
+          </li>
+          <li><strong>Habilidades e atributos:</strong> Os Tuatha Dé Danann são conhecidos por suas habilidades mágicas, conhecimento das artes e ciências, e seu papel como guardiões das tradições culturais e espirituais. Eles representam a conexão entre o mundo dos mortais e o mundo dos deuses.
+          </li>
+          <li><strong>Principais membros:</strong> Os Tuatha Dé Danann incluem uma série de figuras importantes, como Dagda, a Morrígan, Lugh, Nuada, Brígida, entre outros. Cada um deles desempenha um papel específico na mitologia e nas histórias celtas.
+          </li>
+          <li><strong>Batalha de Mag Tuired</strong>: Uma das histórias mais famosas envolvendo os Tuatha Dé Danann é a Batalha de Mag Tuired, na qual eles lutaram contra os Fir Bolg, outro grupo mítico. Os Tuatha Dé Danann emergiram vitoriosos e estabeleceram-se como as divindades principais da Irlanda.</li>
+          <li><strong>Tesouros mágicos:</strong> Os Tuatha Dé Danann são frequentemente associados a vários tesouros mágicos, como o Caldeirão da Abundância de Dagda e a Lança de Lugh, que desempenham papéis significativos em suas histórias.</li>
+          <li><strong>Influência na cultura:</strong> A influência dos Tuatha Dé Danann na cultura irlandesa é notável, com muitas tradições e lugares na Irlanda associados a essas divindades. Seu legado persiste na mitologia, na literatura e nas tradições populares irlandesas.
+          </li>
+        </ul>
+        <p>Em resumo, os Tuatha Dé Danann são um grupo de divindades ou seres sobrenaturais da mitologia celta irlandesa que desempenham um papel importante nas histórias míticas da Irlanda. Eles são conhecidos por suas habilidades mágicas, tesouros mágicos e contribuições culturais à tradição irlandesa.
+        </p>
+        <p>O rei dos Tuatha Dé Danann, na mitologia irlandesa, varia dependendo da versão das histórias e dos mitos. No entanto, um dos reis mais notáveis desse grupo divino é Nuada, também conhecido como Nuada Airgetlám, que significa "Nuada da Mão de Prata."</p>
+        <p>Nuada é frequentemente descrito como o primeiro rei dos Tuatha Dé Danann e desempenha um papel importante na narrativa da Batalha de Mag Tuired, na qual os Tuatha Dé Danann enfrentam os Fir Bolg em uma batalha épica pela supremacia na Irlanda e também Nuada Airgetlám , é frequentemente associado a uma espada lendária chamada "Cláidheamh Soluis", que significa "Espada da Luz" em gaélico irlandês. A Cláidheamh Soluis é uma espada mágica e poderosa que desempenha um papel significativo na história das batalhas e nas conquistas dos Tuatha Dé Danann..
+        </p>
+        <p>Em alguns relatos, Nuada perde um de seus braços na batalha e, de acordo com a lei irlandesa da época, um rei não podia possuir nenhuma imperfeição física. Portanto, ele é deposto como rei, mas mais tarde, com a ajuda da habilidosa artífice Dian Cecht, recebe um braço artificial de prata e, assim, retoma seu lugar como rei dos Tuatha Dé Danann.
+        </p>
+        <p>Além de Nuada, Lugh Lamh-fhada, conhecido como Lugh, também é outro rei notável dos Tuatha Dé Danann. Ele é frequentemente chamado de "Lugh, o Iluminador" e é conhecido por sua habilidade em várias artes e habilidades, como a música e o combate. Lugh desempenha um papel fundamental na Segunda Batalha de Mag Tuired, liderando os Tuatha Dé Danann para a vitória contra Balor, o líder dos Fir Bolg.
+        </p>
+        <p>Portanto, tanto Nuada como Lugh são figuras destacadas como reis dos Tuatha Dé Danann em diferentes momentos das histórias mitológicas irlandesas. Suas histórias são ricas em elementos mágicos, guerras e feitos heroicos.
+        </p>
 
 
       <div class="botao">
