--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -157,6 +157,7 @@
         bravura e habilidade do deus Susanoo, irmão da deusa do sol Amaterasu. Onde uma serpende é decapitada com a
         lendária espada japonesa Kusanagi-no-Tsurugi também conhecida como "A Espada Celestial de Kusanagi". Ela é uma
         das três "Relíquias Sagradas do Japão".</p>
+        <p> <b>Tsukumogami:</b> são objetos inanimados na mitologia japonesa que, após existirem por cerca de 100 anos, adquirem vida e personalidade. Isso faz com que realizem travessuras em casas, como mover objetos ou criar situações misteriosas. A crença popular é que esses seres surgem quando um objeto atinge 100 anos de idade, e eles são vistos como inofensivos, embora travessos. O termo "tsukumogami" é composto por "tsuku" (que significa "99") e "mogami" (que significa "espírito" ou "alma"). Essa crença reflete a ideia de que objetos podem adquirir uma forma de vida ou espírito após serem usados por tanto tempo.</p>
 
       <h2>Criaturas Míticas</h2>
 
@@ -178,6 +179,9 @@
 
       <p><b>Yurei:</b> São espíritos dos mortos, frequentemente associados a pessoas que morreram em circunstâncias trágicas ou
         violentas. São representados como figuras pálidas, vestidas em roupas de funeral.</p>
+
+        <p><b>Umibozu:</b> Essa criatura é conhecida por sua natureza malévola e destrutiva, causando tempestades e afundando navios, colocando em perigo marinheiros. 
+          </p>
 
       <h2>Os Shichi Fukujin</h2>
 
@@ -204,7 +208,19 @@
 
       <p><b>Jurojin:</b> Representa a longevidade e a boa saúde. É frequentemente representado como um homem idoso com uma barba longa.</p>
 
-
+      <h2>Influência</h2>
+      <ul>
+        <li><strong>Religião Xintoísta:</strong> A mitologia japonesa é intrinsecamente ligada ao xintoísmo, a religião indígena do Japão. Deuses e espíritos da mitologia desempenham papéis centrais no panteão xintoísta. Os santuários xintoístas são dedicados a várias divindades e são locais de adoração e rituais que celebram a natureza e a espiritualidade.
+        </li>
+        <li><strong>Festivais e Cerimônias:</strong> Muitos festivais e cerimônias japonesas têm raízes na mitologia. Por exemplo, o festival de Tanabata é baseado na história de Orihime e Hikoboshi, e o Shichi-Go-San é uma celebração de crianças que atingem idades significativas (3, 5 e 7 anos) e tem origens mitológicas.
+        </li>
+        <li><strong>Arte e Cultura:</strong> A mitologia japonesa desempenhou um papel vital na arte, literatura e teatro. Obras clássicas como o "Kojiki" e o "Nihon Shoki" contêm mitos e histórias importantes. Pinturas, esculturas e outros aspectos da cultura visual frequentemente retratam deuses e espíritos</li>
+        <li><strong>Crenças e Valores:</strong> Muitos aspectos da ética e dos valores japoneses têm suas raízes na mitologia. A reverência pela natureza, o respeito aos ancestrais e a ênfase na harmonia são influenciados pela compreensão xintoísta e mitológica da vida.</li>
+        <li><strong>Cinema e Entretenimento:</strong> A mitologia japonesa também desempenhou um papel importante na cultura popular, particularmente no cinema de monstros, como Godzilla, que é frequentemente interpretado como uma manifestação moderna de divindades ou criaturas míticas.</li>
+        <li><strong>Sincretismo Religioso:</strong> A influência da mitologia japonesa é notável na forma como o xintoísmo se funde com o budismo no Japão. Essa combinação é conhecida como "shinbutsu-shūgō" e é um exemplo de como a mitologia e a religião interagem na cultura japonesa.</li>
+        <li><strong>Símbolos Nacionais:</strong> A mitologia também é refletida em símbolos nacionais, como a bandeira do Japão, que apresenta o disco solar vermelho, representando a deusa do sol, Amaterasu.</li>
+      </ul>
+      <h3>Após ter estudado a mitologia japonesa, gostaria de iniciar o quiz?</h3>
       <div class="botao">
         <a href="../quiz/japonesa.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
