--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -165,19 +165,29 @@
 
       <p><b>Kitsune:</b> São raposas com poderes sobrenaturais, muitas vezes consideradas mensageiras de Inari, a deusa
         da fertilidade e do arroz. Elas são conhecidas por sua astúcia e habilidade de se transformar em humanos.</p>
+        <img src="../../../back/imagens/japonesa/Prince_Hanzoku_terrorised_by_a_nine-_tailed_fox.jpg" alt="">
 
       <p><b>Tengu:</b> Espíritos da montanha que são frequentemente representados com rostos avermelhados e narizes
         longos. Eles são considerados guardiões de florestas e montanhas, e muitas vezes são habilidosos em artes
         marciais.</p>
 
+      <img src="../../../back/imagens/japonesa/640px-KyosaiTenguBonze.jpg" alt="">
+
       <p><b>Ryūjin:</b> é uma deidade marinha da mitologia japonesa, frequentemente referida como o "Deus Dragão". Ele é
         venerado como o governante dos oceanos e mares, e é considerado uma figura poderosa e majestosa.</p>
+
+      <img src="../../../back/imagens/japonesa/Tamatori_being_pursued_bya_dragon.jpg" alt="">
+
 
       <p><b>Rokurokubi:</b> Mulheres que durante o dia parecem normais, mas à noite têm pescoços extensíveis que se alongam.
         Elas são vistas como figuras assustadoras.</p>
 
+        <img src="../../../back/imagens/japonesa/Suushi_Nukekubi.jpg" alt="">
+
       <p><b>Yurei:</b> São espíritos dos mortos, frequentemente associados a pessoas que morreram em circunstâncias trágicas ou
         violentas. São representados como figuras pálidas, vestidas em roupas de funeral.</p>
+
+        <img src="../../../back/imagens/japonesa/Suushi_Yurei.jpg" alt="">
 
       <h2>Os Shichi Fukujin</h2>
 
