--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -51,6 +51,9 @@
             <p>Diversas culturas mesopotâmicas acreditavam na vida após a morte e, por isso, desenvolviam uma série de rituais funerários. Geralmente os mortos eram enterrados com alguns de seus objetos pessoais e a tumba que abrigava o corpo poderia indicar a condição financeira do falecido. De acordo com algumas narrativas míticas, os mortos passavam o além-vida em um mundo subterrâneo onde se alimentavam de pó para o resto de seus dias.</p>
             <h3>O mito da criação:</h3>
             <p>A criação do ser humano é o tema principal do mito de Enki e Ninmah . Isso começa com a criação do mundo e a população inicial da Terra pelos deuses, que se unem e se proliferam, até que tenham que produzir seu próprio alimento para sobreviver, o que é extremamente insatisfeito com eles. Eles, portanto, reclamam com a deusa Namma , que pede a seu filho Enki que desenvolva substitutos para os deuses que trabalhariam em seu lugar e para seu benefício. Enki fez um molde, depois o deu à mãe para que ela colocasse o barro formando os seres humanos, que ganharam vida graças à ajuda de um grupo de deusas em primeiro lugar foi Ninmah , que atribuiu seu destino ao trabalho para os deuses. A maneira exata pela qual os homens ganham vida não é conhecida, o texto que chegou até os dias de hoje é fragmentário onde talvez seja mencionado. Relata a origem do mundo graças aos feitos de Marduk, uma das principais divindades dos babilônios.</p>
+
+            <img src="../../../back/imagens/mesopotamica/Copia_de_Enki.jpg" alt="">
+
             <h3>O dilúvio:</h3>
             <p>Um mito que foi muito temido e, talvez por isso, compilado diversas vezes, em diferentes épocas na história, foi o mito do dilúvio. Nesse relato contava-se que, em uma época muito remota, os deuses, insatisfeitos com os homens, resolveram destruir a humanidade, fazendo cair uma chuva torrencial, que fez subir as águas dos rios.</p>
             <p>No entanto, Enki, o deus das águas, revelou o plano dos deuses a um escolhido, Ziusudra (chamado de Utnapishtim pelos acádios), aconselhando-o a construir uma embarcação gigantesca. Vejam um trecho do relato sumério desse mito, encontrado em Nippur:</p>
@@ -58,6 +61,9 @@
               O dilúvio se estendeu sobre a terra [E] o grande barco foi sacudido pelos vendavais sobre as águas Utu [o deus sol] apareceu, espalhando luz sobre o céu e a terra (...)</q></p>
             <p>Tal mito também foi compilado, muitos séculos depois, num dos livros que compõem a Bíblia, tendo como principal personagem um homem chamado Noé. Esse fato pode ser explicado, pois os hebreus (povo que deu origem aos judeus) tinham suas raízes ancestrais em Ur, uma importante cidade da Mesopotâmia.</p>
             <h3>Gilgamesh:</h3>
+
+              <img src="../../../back/imagens/mesopotamica/Hero_lion_Dur-Sharrukin_Louvre_AO19862.jpg" alt="">
+
             <p>Os feitos de Gilgamesh, rei de Uruk, na antiga Mesopotâmia, foram cantados por dois mil anos até que um grande incêndio, em 612 a.C., devastou a biblioteca de Nínive, que guardava os registros escritos. Sem eles, o nome de Gilgamesh foi sendo pouco a pouco esquecido até desaparecer completamente. Desapareceram, também, os registros das sociedades que povoaram a Mesopotâmia e regiões vizinhas, e com eles, o passado do Oriente Próximo.
             Foram encontradas cerca de 30.000 plaquetas de argila com escrita cuneiforme. Eram fragmentos que formavam 1.200 textos distintos. Entre eles, estavam as 12 plaquetas contendo a epopeia de Gilgamesh. A fabulosa história desse herói foi recuperada 48 séculos depois de seu reinado e, mais uma vez, encantou historiadores e o público leigo.
             </p>
