--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -34,8 +34,22 @@
           </ul>
         </li>
         <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
+        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+        <li>
+          <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+          <ul class="dropdown">
+            <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+            <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+            <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
+            <li class="link-dropdown"id="linkGrecia"><a href="grega.html">Grega</a></li>
+            <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+            <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+            <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+          </ul>
+        </li>
+        <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
       </ul>
-    </nav>
+      </nav>
   </header>
 
   <div class="row">
@@ -299,9 +313,6 @@
         </li>
         <p>Em resumo, a mitologia hindu é um componente vital da cultura e da religião indianas, permeando a vida cotidiana, as artes, a filosofia e a espiritualidade. Ela continua a ser uma parte ativa e relevante da herança cultural da Índia e uma fonte de inspiração para muitos aspectos da vida moderna, tanto na Índia quanto em comunidades hindus em todo o mundo.</p>
       </ul>
-      <div class="botao">
-        <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
-      </div>
       <div class="botao">
         <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
