--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -197,7 +197,25 @@
         <p>Portanto, tanto Nuada como Lugh são figuras destacadas como reis dos Tuatha Dé Danann em diferentes momentos das histórias mitológicas irlandesas. Suas histórias são ricas em elementos mágicos, guerras e feitos heroicos.
         </p>
 
+        <h2>Influência</h2>
+        <ul>
+          <li><strong>Literatura e Narrativas Épicas:</strong> A mitologia irlandesa é rica em narrativas épicas, com destaque para o "Ciclo do Ulster" (Táin Bó Cúailnge), que conta a história da grande guerra entre os reinos da Irlanda. Essas histórias têm influenciado a literatura irlandesa moderna, incluindo autores como W.B. Yeats e James Joyce.
+          </li>
+          <li><strong>Folclore e Tradições:</strong> Muitos elementos do folclore irlandês têm origens na mitologia, como criaturas sobrenaturais, contos de fadas e histórias de heróis. Os mitos moldaram as tradições populares e festivais, como o Halloween (Samhain), que tem raízes em celebrações celtas.
+          </li>
+          <li><strong>Religião e Espiritualidade:</strong> A mitologia irlandesa influenciou as práticas religiosas e espirituais na Irlanda, tanto antes da cristianização quanto depois. Elementos mitológicos ainda são incorporados em festivais e rituais cristãos, como o Dia de São Brígida</li>
+          <li><strong>Símbolos Nacionais:</strong> Muitos símbolos nacionais da Irlanda têm origens mitológicas. O trevo de três folhas, que é associado à sorte e à proteção, é frequentemente ligado à deusa celta Brígida. Além disso, o Leprechaun, um ser mítico, é frequentemente associado à cultura irlandesa.</li>
+          <li><strong>Arte e Design:</strong> A mitologia irlandesa influenciou a arte e o design, aparecendo em pinturas, joias e esculturas. Símbolos mitológicos, como o nó celta, são amplamente usados em joalheria e decorações.
+          </li>
+          <li><strong>Identidade Nacional:</strong> A mitologia irlandesa desempenhou um papel importante na construção da identidade nacional da Irlanda. As histórias míticas e os heróis lendários são parte integrante da compreensão do que significa ser irlandês.
+          </li>
+          <li><strong>Ressurgimento Cultural:</strong> No final do século XIX e início do século XX, houve um ressurgimento do interesse na mitologia irlandesa como parte do movimento literário e cultural conhecido como Renascimento Celta. Isso teve um impacto significativo na literatura, teatro e artes visuais da época.
+          </li>
+          <li><strong>Turismo e Promoção da Cultura:</strong> A mitologia irlandesa é frequentemente usada para promover o turismo na Irlanda, com muitos locais históricos e paisagens naturais associados a lendas mitológicas.
+          </li>
+        </ul>
 
+        <h3>Após ter estudado a mitologia irlandesa, gostaria de iniciar o quiz?</h3>
       <div class="botao">
         <a href="../quiz/irlandesa.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
