--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -192,7 +192,7 @@
 
         <p><b>Umibozu:</b> Essa criatura é conhecida por sua natureza malévola e destrutiva, causando tempestades e afundando navios, colocando em perigo marinheiros. 
           </p>
-
+          <img src="../../site/paginas/imagens/omibozu.jpeg" alt="">
  
 
       <h2>Os Shichi Fukujin</h2>
@@ -219,7 +219,7 @@
       <p><b>Hotei:</b> Também conhecido como "Buda Sorridente", é associado à generosidade e à abundância. É frequentemente representado como um homem barrigudo, sorrindo e carregando um saco de presentes.</p>
 
       <p><b>Jurojin:</b> Representa a longevidade e a boa saúde. É frequentemente representado como um homem idoso com uma barba longa.</p>
-
+        <img src="../paginas/imagens/shichi.jpg" alt="">
       <h2>Influência</h2>
       <ul>
         <li><strong>Religião Xintoísta:</strong> A mitologia japonesa é intrinsecamente ligada ao xintoísmo, a religião indígena do Japão. Deuses e espíritos da mitologia desempenham papéis centrais no panteão xintoísta. Os santuários xintoístas são dedicados a várias divindades e são locais de adoração e rituais que celebram a natureza e a espiritualidade.
