--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -67,6 +67,8 @@
           >
         </p>
 
+        <img src="../../../back/imagens/egipcia/The_gods_of_the_Egyptians.jpg" alt="">
+
         <h2>Neterus Primordiais:</h2>
         <p>
           São os deuses mais importantes os quais estão associados com o mito de
@@ -182,6 +184,8 @@
           do submundo, era ele que guiava os mortos após sua morte.
         </li>
 
+        <img src="../../../back/imagens/egipcia/Krewe_of_Proteus,_1882_-_costume_-_Anubis.png" alt="">
+
         <li>
           <b>Anuket (ou Anukis):</b> deusa da fertilidade a qual estava
           relacionada com a água
@@ -201,6 +205,10 @@
           <b>Sekhmet:</b> filha de Rá e por isso, reflete o aspecto destrutivo
           do sol.
         </li>
+
+        <h2>Livro dos Mortos</h2>
+
+        <img src="../../../back/imagens/egipcia/Book_of_the_dead_egypt.jpg" alt="">
 
         <div class="botao">
           <a href="../quiz/egipcia.html"
