--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -133,6 +133,32 @@
       <p>Cumprindo a promessa que fizera a Medeia, Jasão casou-se com ela e apoderou-se do velo de ouro.
       Na viagem de volta, os argonautas precisaram atravessar a região onde viviam as sereias, criaturas metade mulher e metade peixe que atraíam os marinheiros para a morte com seu belo canto. O canto de Orfeu era mais belo, e graças à arte do grande poeta os argonautas conseguiram resistir às sereias e voltar a Tessália.</p>
       <p>Jasão foi viver em Corinto com Medéia, com quem teve muitos filhos. No entanto, abandona Medéia para desposar Creúsa, filha de Creonte. Indignada, Medéia matou Creúsa e os próprios filhos que tivera com Jasão.</p>
+
+      <h2>Influência</h2>
+      <ul>
+      <li><strong>Literatura e Artes Visuais:</strong> A mitologia grega tem sido uma fonte inesgotável de inspiração para escritores e artistas ao longo dos séculos. Desde os épicos de Homero, como a "Ilíada" e a "Odisseia", até peças de teatro de autores como Sófocles e Eurípides, a mitologia grega é um tema recorrente na literatura clássica. Ela também desempenhou um papel fundamental na arte visual, com esculturas, pinturas e mosaicos retratando deuses e heróis gregos.
+      </li>
+      <li><strong>Filosofia e Pensamento Político:</strong> A mitologia grega influenciou o pensamento filosófico, político e ético. Filósofos como Platão e Aristóteles frequentemente usaram mitos e alegorias gregas em suas obras para ilustrar conceitos complexos e questões morais.
+      </li>
+      <li><strong>Linguagem e Terminologia:</strong>Linguagem e Terminologia: Muitos termos e metáforas da mitologia grega foram incorporados ao vocabulário moderno. Expressões como "Achilles' heel" (calcanhar de Aquiles) e "Pandora's box" (caixa de Pandora) são exemplos disso.
+      </li>
+      <li><strong>Teatro e Drama:</strong> O teatro grego antigo, com suas tragédias e comédias, frequentemente explorava temas mitológicos. Essas peças continuam a ser estudadas e encenadas em todo o mundo, mantendo viva a influência da mitologia grega no teatro contemporâneo.
+      </li>
+      <li><strong>Ciência e Astronomia:</strong> Muitos planetas e constelações do sistema solar receberam nomes de deuses e heróis gregos, como Vênus (deusa do amor) e Andrômeda (uma princesa da mitologia grega). A influência da mitologia também é visível na nomenclatura científica de plantas e animais.
+      </li>
+      <li><strong>Psicologia e Psicanálise:</strong> Sigmund Freud e Carl Jung usaram mitos gregos em suas teorias sobre o inconsciente e a psicologia. A jornada do herói, um conceito mitológico, é frequentemente usado para entender o desenvolvimento pessoal e a transformação.
+      </li>
+      <li><strong>Educação e Academia:</strong> A mitologia grega é um componente essencial do currículo de muitas instituições educacionais em todo o mundo. Ela é frequentemente estudada em aulas de literatura, história, filosofia e artes.
+      </li>
+      <li><strong>Cinema e Mídia Pop:</strong> A mitologia grega é uma fonte constante de inspiração para filmes, programas de TV e jogos de vídeo. Histórias de deuses, monstros e heróis são frequentemente adaptadas para o entretenimento moderno.
+      </li>
+      <li><strong>Identidade Cultural:</strong> A mitologia grega desempenha um papel na formação da identidade cultural, especialmente em países ocidentais. Ela é frequentemente usada como um meio de conectar a cultura contemporânea com suas raízes na Antiguidade.
+      </li>
+    </ul>
+    <p>Em resumo, a mitologia grega é uma parte fundamental da herança cultural do mundo e continua a influenciar diversas áreas da vida moderna, desde a literatura e as artes até a psicologia e o entretenimento. Suas histórias e personagens perduram como um legado duradouro da Antiguidade grega.
+    </p>
+
+    <h3>Após ter estudado a mitologia grega, gostaria de iniciar o quiz?</h3>
       <div class="botao">
         <a href="../quiz/grega.php"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
