--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -70,6 +70,7 @@
           <li><strong>Netuno:</strong> deus dos mares, oceanos e também da água doce.</li>
           <li><strong>Juno:</strong> deusa rainha dos deuses.</li>
           <li><strong>Baco:</strong> deus do vinho e das festas.</li>
+          <li><strong>Vertumno:</strong> associado à transformação e ao cultivo das plantas.</li>
           <li><strong>Febo:</strong> divindade romana que representava a luz do Sol, poesia, música, beleza masculina.</li>
           <li><strong>Diana:</strong> deus da caça, castidade, animais selvagens, Lua e luz.</li>
           <li><strong>Ceres:</strong> deusa da colheita, agricultura.</li>
