--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -107,6 +107,7 @@
           <li><strong>Sincretismo Religioso:</strong> Os romanos eram conhecidos por sua prática de sincretismo religioso, que envolvia a fusão de divindades de diferentes culturas e tradições religiosas. Isso levou a uma coexistência de deuses gregos e romanos em muitos aspectos da vida religiosa e cultural.</li>
         </ul>
         <p>É importante notar que, embora os romanos tenham adotado muitos elementos da mitologia grega, eles também desenvolveram sua própria tradição mitológica única ao longo do tempo. A mitologia romana tinha suas próprias histórias, divindades e características distintas, e essa síntese de influências gregas e romanas contribuiu para a rica tapeçaria mitológica da Roma Antiga.</p>
+        <h3>Após ter estudado a mitologia romana, gostaria de iniciar o quiz?</h3>
         <div class="botao">
           <a href="../quiz/romana.html"
             ><input type="button" value="COMEÇAR" id="btnComecar"
