fiz quase nada nessa porra

--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -68,9 +68,14 @@
       <p><b>Aine of Knockaine:</b> Deusa do amor e da fertilidade, mais tarde foi conhecida como a rainha das fadas.
         Deusa relacionada à lua, colheita, e a criação de gado.</p>
 
+      <img src="../../../back/imagens/irlandesa/" alt="">
+
+
       <p><b>Angus Og:</b> Deus da Juventude, do Amor e da Beleza na Irlanda Antiga. Um dos Tuatha de Dannan, Angus
         possuía uma harpa dourada que produzia música de irresistível doçura. Os seus beijos transformavam-se em
         pássaros que transportavam mensagens de amor.</p>
+
+        <img src="../../../back/imagens/irlandesa/John_Duncan_-_Angus_Og.jpg" alt="">
 
       <p><b>Dagda:</b> "O Bom Deus", é uma das figuras mais proeminentes na mitologia irlandesa. Ele é associado à
         fertilidade, abundância, magia e sabedoria. É frequentemente representado como um deus corpulento, vestindo um
@@ -79,13 +84,19 @@
         vital na mitologia, liderando os Tuatha Dé Danann em várias batalhas e negociando acordos com outras divindades.
       </p>
 
+      <img src="../../../back/imagens/irlandesa/Dagda.jpg" alt="">
+
       <p><b>Etain:</b> Na mitologia celta, Etain (A Brilhante) era a tripla deusa do sol, água, cavalos, fragrâncias,
         beleza, música e transmigração das almas.</p>
+
+        <img src="../../../back/imagens/irlandesa/etain.jpg" alt="">
 
       <p><b>Fintan:</b> Na mitologia celta, o salmão da sabedoria, era um metamorfo. Foi o único irlandês a sobreviver
         ao dilúvio mudando sua forma para um falcão para sobrevoar as águas e depois em salmão para nelas sobreviver.
         Tendo comido nozes mágicas recebeu todo o conhecimento, mas ficou preso numa rede e foi comido por Finn MacCool
         que acabou adquirindo seu conhecimento e seus poderes.</p>
+
+        <img src="../../../back/imagens/irlandesa/" alt="">
 
       <p><b>Morrigan:</b> é uma deusa guerreira associada à guerra, à morte e à profecia. Ela é frequentemente
         representada como uma figura feminina poderosa, muitas vezes vista em forma de corvo. Morrigan é uma figura
@@ -128,6 +139,8 @@
         seus reis e rainhas. Os irlandeses acreditam que elas são responsáveis pelas mais diversas situações que
         acontecem no reino humano. Se uma criança encontra uma fada e a trata bem, pode ter um desejo concedido. </p>
 
+        <img src="../../../back/imagens/irlandesa/" alt="">
+
       <h3>The Pooka</h3>
       <p>A Pooka é uma criatura lendária da mitologia irlandesa, conhecida por sua natureza travessa e capacidade de assumir várias formas. Ela é frequentemente retratada como um espírito ou entidade metamórfica, muitas vezes tomando a forma de um cavalo negro com olhos flamejantes, aguia, cachorro e outros animais. A Pooka é ambivalente, capaz de causar problemas, mas também de trazer boa sorte. Ela está associada a celebrações como o festival de Samhain (precursor do Halloween) e faz parte do rico folclore e da tradição mágica da Irlanda.</p>
 
@@ -136,6 +149,9 @@
         filmes e contos sul-europeus, muito pelo contrário. Com rosto de porco e dentes afiados, vivem nas águas geladas
         dos oceanos, atraindo marinheiros para as profundezas para matá-los. Elas também podem ser vistas em terra
         firme, fazendo visitas aos homens, com quem se relacionam antes de fugir de volta ao mar.</p>
+
+        <img src="../../../back/imagens/irlandesa/John_William_Waterhouse_A_Mermaid.jpg" alt="">
+
 
       <h3>The Leprechauns</h3>
       <p>São o símbolo da Irlanda. A lenda conta que antes mesmo de os seres humanos habitarem o país, eles já se
