--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Egípcia | SEPE</title>
+  <title>Contato | SEPE</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../footer/footer.css">
 
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK-teste.png" alt=""
+    <a href="../paginas/index.php" id="logo"><img src="../../../../back/imagens/LYJEK.png" alt=""
         class="logo" /></a>
     <nav>
       <ul class="lista-nav">
@@ -112,7 +112,7 @@
 
 
       <div class="card">
-        <img src="http://127.0.0.1:5500/front/site/paginas/imagens/luizF.jpg" alt="Foto de Luiz Fernando"
+        <img src="http://127.0.0.1:5500/front/site/paginas/imagens/luizF.jpeg" alt="Foto de Luiz Fernando"
           class="profile-image">
         <h2 class="name">Luiz Fernando Blume Jacinto</h2>
         <p>luiz.fernando.251107@gmail.com</p>
