--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -189,7 +189,7 @@
     <div class="footer-sociais" >
       <img src="../../../back/imagens/LYJEK(1).png" alt="">
       <div>
-        <a href="#">Política de privacidade</a>
+        <a href="footer/politica-priv.html">Política de privacidade</a>
         <a href="../paginas/footer/contato.html">Contato</a>
         <a href="#">Sobre</a>
       </div>
